fix width of bio containers so that names wrap

--- a/assets/styles/volunteer.css
+++ b/assets/styles/volunteer.css
@@ -14,11 +14,11 @@
 
 .volunteers-container {
   width: 75%;
-  margin: 0 auto 40px auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 0 auto 40px auto;
 }
 
 .bio-with-pic {
@@ -27,19 +27,20 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 140px;
 }
 
-.bio-no-pic {
-  flex-basis: 25%;
-  min-width: 140px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+.bio-with-pic h3 {
+  flex-wrap: wrap;
+}
+
+.badge-container {
+  margin-top: 15px;
 }
 
 .bio-pic {
   width: 140px;
   height: 140px;
   border-radius: 5px;
+  margin-bottom: 15px;
 }
